--- a/ios/Taully/Info.plist
+++ b/ios/Taully/Info.plist
@@ -22,6 +22,10 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Use images to upload for the competition.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Take pictures to upload for the competition.</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
