--- a/package.json
+++ b/package.json
@@ -15,16 +15,22 @@
     "@react-native-firebase/app": "^7.0.1",
     "@react-native-firebase/auth": "^7.0.2",
     "@react-native-firebase/firestore": "^7.0.1",
+    "@react-native-firebase/storage": "^7.0.1",
     "@react-navigation/bottom-tabs": "^5.4.7",
     "@react-navigation/native": "^5.4.2",
     "@react-navigation/stack": "^5.3.9",
+    "moment": "^2.26.0",
     "native-base": "^2.13.12",
     "react": "16.11.0",
+    "react-devtools": "^4.7.0",
     "react-native": "0.62.2",
+    "react-native-actionsheet": "^2.4.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-crop-picker": "^0.31.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^1.0.2",
-    "react-native-screens": "^2.7.0"
+    "react-native-screens": "^2.7.0",
+    "uuidv4": "^6.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
