--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.62.2",
     "react-native-actionsheet": "^2.4.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-get-random-values": "^1.4.0",
     "react-native-image-crop-picker": "^0.31.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^1.0.2",
