--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-get-random-values": "^1.4.0",
     "react-native-image-crop-picker": "^0.31.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-modal-datetime-picker": "^8.7.0",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^1.0.2",
     "react-native-screens": "^2.7.0",
+    "react-native-vector-icons": "^6.6.0",
     "uuidv4": "^6.0.9"
   },
   "devDependencies": {
