--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-devtools": "^4.7.0",
     "react-native": "0.62.2",
     "react-native-actionsheet": "^2.4.2",
+    "react-native-bootsplash": "^3.2.1",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-get-random-values": "^1.4.0",
     "react-native-iap": "^4.4.9",
